--- a/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="backmatter">
 		<section epub:type="appendix" id="P70004858060007A3">
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"/><span epub:type="label">Appendix </span><span class="number" epub:type="ordinal">A</span> Title</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"/><span epub:type="label">Appendix </span><span epub:type="ordinal">A</span> Title</h1>
 				<p epub:type="subtitle">Appendix Subtitle</p>
 			</header>
 			<section id="P70004858060007A5" class="level2">
@@ -21,7 +21,7 @@
 				
 				<section id="P70004858060007A6" class="level3">
 					<header>
-						<h3 epub:type="title"><span class="number" epub:type="ordinal">1 </span><span epub:type="label">Subsection</span></h3>
+						<h3 epub:type="title"><span epub:type="ordinal">1 </span><span epub:type="label">Subsection</span></h3>
 					</header>
 					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
 					<ul>
