--- a/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
@@ -9,14 +9,14 @@
 	</head>
 	<body class="fixed" epub:type="backmatter">
 		<section epub:type="bibliography" id="P70004858060007A7"><header><h1 epub:type="title"><span class="pagebreak" title="21" epub:type="pagebreak" id="P7000485806000938"/><span epub:type="label">Bibliography</span></h1></header>
-			<section id="P70004858060007A8" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">1</span></h2></header>
+			<section id="P70004858060007A8" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span epub:type="ordinal">1</span></h2></header>
 				<ol class="biblioentrylist">
 					<li epub:type="biblioentry" id="P70004858060007A9"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
 					<li epub:type="biblioentry" id="P70004858060007AA"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
 					<li epub:type="biblioentry" id="P70004858060007AB"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
 				</ol>
 			</section>
-			<section id="P70004858060007AC" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4</span></h2></header>
+			<section id="P70004858060007AC" class="bibliodiv level2"><header><h2 epub:type="title"><span epub:type="label">Chapter </span><span epub:type="ordinal">4</span></h2></header>
 				<ol class="biblioentrylist">
 					<li epub:type="biblioentry" id="P70004858060007AD"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
 					<li epub:type="biblioentry" id="P70004858060007AE"><p>This is biblioentry text. It should appear as un-numbered.</p></li>
