--- a/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
@@ -7,8 +7,8 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="frontmatter">
-		<section id="d6e264" class="copyright-page level1">
+	<body epub:type="frontmatter">
+		<section id="d6e264" epub:type="copyright-page" class="level1">
 			<header>
 				<h1 epub:type="title"><span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"/>Copyright Page</h1>
 			</header>
@@ -52,7 +52,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<section id="P7000485806000696" aria-label="credits and copyright">
+			<section id="P7000485806000696" epub:type="other-credits" aria-label="credits and copyright">
 				<p>Credits and acknowledgments borrowed from other sources and reproduced, with permission, in this textbook appear on appropriate page within.</p>
 				<p>Copyright © 2012, 2008, 2004, 2002 Pearson Education, Inc., 501 Boylston Street, Boston, MA, 02116. All rights reserved. Manufactured in the United States of America. This publication is protected by Copyright, and permission should be obtained from the publisher prior to any prohibited reproduction, storage in a retrieval system, or transmission in any form or by any means, electronic, mechanical, photocopying, recording, or likewise. To obtain permission(s) to use material from this work, please submit a written request to Pearson Education, Inc., Permissions Department, 501 Boylston Street, Boston, MA, 02116, or email <a class="email" href="mailto:permissionsus@pearson.com">permissionsus@pearson.com</a>.</p>
 			</section>
@@ -70,7 +70,7 @@
 				<p>2010048486</p>
 				<p>10 9 8 7 6 5 4 3 2 1 BRG 14 13 12 11 10</p>
 				<p><img width="157" height="60" src="../images/pub1.jpg" alt="Pearson" /></p>
-				<p><a class="ulink" href="http://www.pearsonpd.com">www.pearsonpd.com</a></p>
+				<p><a href="http://www.pearsonpd.com">www.pearsonpd.com</a></p>
 				<p>ISBN-10: 0-13-248750-0</p>
 				<p>ISBN-13: 978-0-13-248750-4</p>
 			</section>
