--- a/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
@@ -14,19 +14,19 @@
 			</header>
 			<section epub:type="credits" id="P70004858060007D8" class="creditsetdiv level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007D9"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">1 </span></h2>
+					<h2 epub:type="title" id="P70004858060007D9"><span epub:type="label">Chapter </span><span epub:type="ordinal">1 </span></h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
 			<section epub:type="credits" id="P70004858060007DA" class="creditsetdiv level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DB"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span></h2>
+					<h2 epub:type="title" id="P70004858060007DB"><span epub:type="label">Chapter </span><span epub:type="ordinal">2 </span></h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
 			<section epub:type="credits" id="P70004858060007DC" class="creditsetdiv level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DD"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span></h2>
+					<h2 epub:type="title" id="P70004858060007DD"><span epub:type="label">Chapter </span><span epub:type="ordinal">3 </span></h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
