--- a/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed">
 		<section epub:type="part" id="P70004858060006B5">
 			<header>
-				<h1 epub:type="title"><span epub:type="label">Part </span><span class="number" epub:type="ordinal">I: </span><span class="pagebreak" title="1" epub:type="pagebreak" id="P70004858060006B6"/>Part Title</h1>
+				<h1 epub:type="title"><span epub:type="label">Part </span><span epub:type="ordinal">I: </span><span class="pagebreak" title="1" epub:type="pagebreak" id="P70004858060006B6"/>Part Title</h1>
 			</header>
 		</section>
 	</body>
