--- a/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
@@ -15,17 +15,17 @@
 			</header>
 			<section epub:type="rearnotes" id="P70004858060007D2" class="rearnotesdiv level2">
 				<header>
-					<h2 epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2</span></h2>
+					<h2 epub:type="title"><span epub:type="label">Chapter </span><span epub:type="ordinal">2</span></h2>
 				</header>
 				<ol class="rearnotelist">
 					<li epub:type="rearnote" id="P70004858060007D3">
-						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D3">1</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D3">1</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 					<li epub:type="rearnote" id="P70004858060007D4">
-						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D4">2</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D4">2</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 					<li epub:type="rearnote" id="P70004858060007D5">
-						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D5">3</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
+						<p><span epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D5">3</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 				</ol>
 			</section>
