--- a/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Z</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="index">
-		<section epub:type="index-group" id="P70004858060007CB" class="index-group level2">
+	<body epub:type="index">
+		<section epub:type="index-group" id="P70004858060007CB" class="level2">
 			<header>
 				<h2 epub:type="title" id="P70004858060007CC">Z</h2>
 			</header>
