some additional minor cleanup

--- a/samples/structure-sample-01/EPUB/xhtml/index02.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index02.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>B</title>
+		<title>Index B</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
