--- a/samples/structure-sample-01/EPUB/xhtml/links.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/links.xhtml
@@ -13,23 +13,7 @@
 				<h1 epub:type="title"><span epub:type="label"><span class="pagebreak" title="10" epub:type="pagebreak" id="P7000485806000732"/>Chapter </span><span epub:type="ordinal">4: </span>Linked Content</h1>
 			</header>
 			<section class="bodymatter" id="d6e4925" aria-label="Chapter body">
-				<p>The <code>a</code> element can represent a hyperlink or an anchor. If the a element has an href attribute, then it represents a hyperlink. If the a element has no href attribute, then the element represents an anchor. The a element supports the following classes</p>
-				<ul>
-					<li><p>xref</p></li>
-					<li><p>keyword</p></li>
-					<li><p>marginalia</p></li>
-					<li><p>biblioref</p></li>
-					<li><p>noteref_footnote</p></li>
-					<li><p>noteref_rearnote</p></li>
-					<li><p>noteref_opener</p></li>
-					<li><p>ulink</p></li>
-					<li><p>objective</p></li>
-					<li><p>pageref</p></li>
-					<li><p>index-locator, termref</p></li>
-					<li><p>url-obsolete</p></li>
-					<li><p><a href="asides.xhtml#P70004858060006F9">annoref</a></p></li>
-					<li><p>url-example</p></li>
-				</ul>
+				<p>The <code>a</code> element can represent a hyperlink or an anchor. If the a element has an href attribute, then it represents a hyperlink. If the a element has no href attribute, then the element represents an anchor. </p>
 				<section id="P7000485806000733" class="level1">
 					<header>
 						<h3 epub:type="title"><span epub:type="ordinal">4.1 </span>General Cross-reference</h3>
@@ -138,6 +122,28 @@
 						<p><span class="pagebreak" title="14" epub:type="pagebreak" id="P7000485806000749"/>This is the start of page 14</p>
 						<p>Index entry - third instance</p>
 					</section>
+				</section>
+				<section id="P7000485806000743_2" class="level1">
+						<header>
+							<h3 epub:type="title"><span epub:type="ordinal">4.13 </span>Styling of linked content</h3>
+						</header>
+					<p>The example css supports the following classes for the a element:</p>
+									<ul>
+										<li><p>xref</p></li>
+										<li><p>keyword</p></li>
+										<li><p>marginalia</p></li>
+										<li><p>biblioref</p></li>
+										<li><p>noteref_footnote</p></li>
+										<li><p>noteref_rearnote</p></li>
+										<li><p>noteref_opener</p></li>
+										<li><p>ulink</p></li>
+										<li><p>objective</p></li>
+										<li><p>pageref</p></li>
+										<li><p>index-locator, termref</p></li>
+										<li><p>url-obsolete</p></li>
+										<li><p><a href="asides.xhtml#P70004858060006F9">annoref</a></p></li>
+										<li><p>url-example</p></li>
+									</ul>
 				</section>
 			</section>
 		</section>
