--- a/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
@@ -7,7 +7,7 @@
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="frontmatter">
+	<body epub:type="frontmatter">
 		<nav class="toc toc_alternate" id="P70004858060006A2">
 			<header>
 				<h1 epub:type="title">List of sidebars</h1>
