--- a/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Part I: Part Title </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed">
+	<body>
 		<section epub:type="part" id="P70004858060006B5">
 			<header>
-				<h1 epub:type="title"><span epub:type="label">Part </span><span epub:type="ordinal">I: </span><span class="pagebreak" title="1" epub:type="pagebreak" id="P70004858060006B6"/>Part Title</h1>
+				<h1 epub:type="title"><span epub:type="label">Part </span><span epub:type="ordinal">I: </span><span class="pagebreak" title="1"  id="P70004858060006B6"/>Part Title</h1>
 			</header>
 		</section>
 	</body>
