--- a/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Preface Section </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
 		<link rel="alternate stylesheet" type="text/css" title="night" href="../css/theme/night.css" />
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
-	<body class="fixed" epub:type="frontmatter">
+	<body epub:type="frontmatter">
 		<section epub:type="preface" id="P70004858060006A7">
 			<header>
 				<h1 epub:type="title"><span epub:type="label">Preface Section</span><span class="pagebreak" title="xiii" epub:type="pagebreak" id="P70004858060006A8"/></h1>
@@ -22,7 +22,7 @@
 				<p><span class="pagebreak" title="xiv" epub:type="pagebreak" id="P70004858060006AB"/>Reading and understanding the theoretical overview (<a class="pageref" epub:type="pagebreak" href="part01.xhtml#P70004858060006B5"><span epub:type="label">Section </span><span epub:type="ordinal">I</span></a>) is vital to understanding the basic principles of instructing and assessing English learners. This should be approached first. The other sections can be approached one strategy at a time, but one or two strategies from each section should be tried first before working through each section. Strategies that are the easiest to implement are listed first in each category. It makes sense for students or beginning teachers to build their repertoire of strategies gradually, sampling from all five sections. After that, the text can easily be used as a resource book.</p>
 				<p>When you notice a need among your students, look for a strategy to meet that need. Keep in mind the basic principles of teaching English learners. You must support their understanding with realia, visuals, and contextualized language. It is vital to emphasize vocabulary, fluency, and building background knowledge for comprehension. Students must be actively engaged to benefit fully from instruction. They must be given opportunities to demonstrate their growing skills in authentic <span class="pagebreak" title="xv" epub:type="pagebreak" id="P70004858060006AC"/>tasks and in a nonstressful environment. This text is written with the goal of providing this type of classroom for all students.</p>
 			</section>
-			<section epub:type="acknowledgments" id="P70004858060006AD" class="acknowledgments level2">
+			<section epub:type="acknowledgments" id="P70004858060006AD" class="level2">
 				<header>
 					<h2 epub:type="title" id="P70004858060006AE"><span epub:type="label">Acknowledgments Section Label</span></h2>
 				</header>
