--- a/samples/structure-sample-01/EPUB/xhtml/subject-index.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/subject-index.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Subject Index </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,7 +8,7 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="index">
-		<section class="subject-index" id="P70004858060007BB">
+		<section id="P70004858060007BB">
 			<header>
 				<h1 epub:type="title"><span class="pagebreak" title="23" epub:type="pagebreak" id="P7000485806000958"/> Subject Index </h1>
 			</header>
