add level1 class

--- a/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
@@ -8,7 +8,7 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body epub:type="frontmatter">
-		<section epub:type="preface" id="P70004858060006A7">
+		<section epub:type="preface" id="P70004858060006A7" class="level1">
 			<header>
 				<h1 epub:type="title"><span epub:type="label">Preface Section</span><span class="pagebreak" title="xiii" epub:type="pagebreak" id="P70004858060006A8"/></h1>
 			</header>
