--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -10,20 +10,20 @@
 	<body>
 		<nav id="toc" epub:type="toc">
 			<h1>Contents</h1>
-			<ol>
+			<ol class="nomark">
 				<li><a href="halftitle.xhtml#d6e189"> Half Titlepage Title </a></li>
 				<li><a href="titlepage.xhtml#d6e199"> Titlepage Title </a></li>
 				<li><a href="copyright.xhtml#d6e264">Copyright Page</a></li>
 				<li><a href="list-of-sidebars.xhtml#P70004858060006A2">List of sidebars</a></li>
 				<li><a href="about-authors.xhtml#P70004858060006A4"> About the Authors Section </a><ol
 						hidden="hidden"></ol></li>
-				<li><a href="preface.xhtml#P70004858060006A7"> Preface Section </a><ol>
+				<li><a href="preface.xhtml#P70004858060006A7"> Preface Section </a><ol class="nomark">
 						<li><a href="preface.xhtml#P70004858060006A9"> Preface Subsection </a></li>
 						<li><a href="bibliography01.xhtml#P70004858060006AF"> Bibliography Section </a></li>
 					</ol></li>
 				<li><a href="part01.xhtml"> Part I: Part Title </a>
-					<ol>
-						<li><a href="asides.xhtml#P70004858060006F9"> Chapter 1: Asides </a><ol>
+					<ol class="nomark">
+						<li><a href="asides.xhtml#P70004858060006F9"> Chapter 1: Asides </a><ol class="nomark">
 								<li><a href="asides.xhtml#P70004858060006FB">1.1 Sidebars</a><ol hidden="hidden">
 										<li><a href="asides.xhtml#P7000485806000702">Sidebar Practice Section Label
 											</a></li>
@@ -39,7 +39,7 @@
 								<li><a href="asides.xhtml#P7000485806000713">1.5 Pullquote</a></li>
 								<li><a href="asides.xhtml#P7000485806000716">1.6 Annotation</a></li>
 							</ol></li>
-						<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 2: Figures and Tables</a><ol>
+						<li><a href="figures-tables.xhtml#P700048580600071E">Chapter 2: Figures and Tables</a><ol class="nomark">
 								<li><a href="figures-tables.xhtml#P7000485806000720">2.1 Figure</a></li>
 								<li><a href="figures-tables.xhtml#P7000485806000722">2.2 Informalfigure</a></li>
 								<li><a href="figures-tables.xhtml#P7000485806000725">2.3 Inline Figure</a></li>
@@ -50,7 +50,7 @@
 								<li><a href="figures-tables.xhtml#P700048580600072D">2.6 Informaltable</a></li>
 								<li><a href="figures-tables.xhtml#P7000485806000730">2.7 Image</a></li>
 							</ol></li>
-						<li><a href="links.xhtml#P7000485806000731">Chapter 3: Linked Content</a><ol>
+						<li><a href="links.xhtml#P7000485806000731">Chapter 3: Linked Content</a><ol class="nomark">
 								<li><a href="links.xhtml#P7000485806000733">3.1 General Cross-reference</a></li>
 								<li><a href="links.xhtml#P7000485806000734">3.2 Keyword Cross-reference</a></li>
 								<li><a href="links.xhtml#P7000485806000739">3.3 marginalia</a></li>
@@ -70,7 +70,7 @@
 							</ol></li>
 						<li><a href="body-content.xhtml#P700048580600075C"> Chapter 4: Typical Chapter Frontmatter
 								and Chapter Backmatter Content <span class="subtitle">Chapter 6 Subtitle</span>
-							</a><ol>
+							</a><ol class="nomark">
 								<li><a href="body-content.xhtml#P700048580600075E">4.1 Introduction Section
 										Label</a></li>
 								<li><a href="body-content.xhtml#P7000485806000760"> 4.2 Learning Objectives Section
@@ -79,13 +79,13 @@
 									</a></li>
 								<li><a href="body-content.xhtml#d6e5627">4.4 Section Heading</a><ol hidden="hidden">
 										<li><a href="body-content.xhtml#d6e5641"> 4.4.1 Example 1 </a></li>
-										<li><a href="body-content.xhtml#P7000485806000767"> 4.4.2 Feature Section </a><ol>
+										<li><a href="body-content.xhtml#P7000485806000767"> 4.4.2 Feature Section </a><ol class="nomark">
 												<li><a href="body-content.xhtml#P7000485806000769"> feature section
 														heading</a></li>
 											</ol></li>
 									</ol></li>
 								<li><a href="body-content.xhtml#P700048580600076A"> 4.5A Feature Section at different
-										level </a><ol>
+										level </a><ol class="nomark">
 										<li><a href="body-content.xhtml#P700048580600076C"> feature section
 												heading</a></li>
 									</ol></li>
@@ -114,12 +114,12 @@
 					</ol>
 				</li>
 				<li><a href="appendix-a.xhtml#P70004858060007A3">Appendix A Title <span class="subtitle">Appendix
-							Subtitle</span></a><ol>
+							Subtitle</span></a><ol class="nomark">
 						<li><a href="appendix-a.xhtml#P70004858060007A5"> Appendix Section</a></li>
 					</ol></li>
 				<li><a href="bibliography02.xhtml#P70004858060007A7">Bibliography</a></li>
 				<li><a href="glossary.xhtml#P70004858060007B0">Glossary</a></li>
-				<li><a href="subject-index.xhtml#P70004858060007BB"> Subject Index</a><ol>
+				<li><a href="subject-index.xhtml#P70004858060007BB"> Subject Index</a><ol class="nomark">
 						<li><a href="index01.xhtml#P70004858060007BC"> A </a></li>
 						<li><a href="index02.xhtml#P70004858060007C5"> B </a></li>
 						<li><a href="index03.xhtml#P70004858060007C8"> C </a></li>
@@ -127,7 +127,7 @@
 					</ol></li>
 				<li><a href="name-index.xhtml#P70004858060007CF"> Name Index </a></li>
 				<li><a href="endnotes.xhtml#P70004858060007D1">Book Endnote List</a></li>
-				<li><a href="credits.xhtml#P70004858060007D6">Credits</a><ol>
+				<li><a href="credits.xhtml#P70004858060007D6">Credits</a><ol class="nomark">
 						<li><a href="credits.xhtml#P70004858060007D8"> Chapter 1 </a></li>
 						<li><a href="credits.xhtml#P70004858060007DA"> Chapter 2 </a></li>
 						<li><a href="credits.xhtml#P70004858060007DC"> Chapter 3 </a></li>
@@ -137,7 +137,7 @@
 		</nav>
 		<nav id="toc-brief" epub:type="toc-brief">
 			<h1>Brief TOC</h1>
-			<ol>
+			<ol class="nomark">
 				<li><a href="preface.xhtml#P70004858060006A7">Preface</a></li>
 				<li><a href="part01.xhtml#P70004858060006B5">Part 1 Part Title</a>
 					<ol class="tocentrylist">
@@ -158,14 +158,14 @@
 			</ol>
 		</nav>
 		<nav id="illustrations" epub:type="loi">
-			<h2>List of Illustrations</h2><ol>
+			<h2>List of Illustrations</h2><ol class="nomark">
 				<li><a href="figures-tables.xhtml#P7000485806000721"> Figure 3.1 Figure Title </a></li>
 				<li><a href="figures-tables.xhtml#P7000485806000723"> The First Americans Location Of Major Indian
 						Groups And Culture Areas In The 1600S</a></li>
 			</ol>
 		</nav>
 		<nav id="tables" epub:type="lot">
-			<h2>List of Tables</h2><ol>
+			<h2>List of Tables</h2><ol class="nomark">
 				<li><a href="asides.xhtml#P70004858060006FF">Table 2.1 This is the table title</a></li>
 				<li><a href="figures-tables.xhtml#P7000485806000729">Table 3.1 Table Title</a></li>
 				<li><a href="figures-tables.xhtml#P700048580600072A"> Table 3.2 Kirton Adaption-Innovation
@@ -174,7 +174,7 @@
 		</nav>
 		<nav id="landmarks" epub:type="landmarks">
 			<h1>Landmarks</h1>
-			<ol>
+			<ol class="nomark">
 				<li><a epub:type="frontmatter" href="seriespage.xhtml">Frontmatter</a></li>
 				<li><a epub:type="bodymatter" href="part01.xhtml">Start of Content</a></li>
 				<li><a epub:type="glossary" href="glossary.xhtml#P70004858060007B0">Glossary</a></li>
@@ -183,7 +183,7 @@
 			</ol>
 		</nav>
 		<nav id="page-list" epub:type="page-list">
-			<ol>
+			<ol class="nomark">
 				<li><a href="seriespage.xhtml#P7000485806000691">i</a></li>
 				<li><a href="halftitle.xhtml#P7000485806000692">ii</a></li>
 				<li><a href="titlepage.xhtml#P7000485806000693">iii</a></li>
